force-app/main/default/objects/Holder_Product_Detail__c/Holder_Product_Detail__c.object-meta.xml
<CustomObject>
    <label>Holder Product Detail</label>
    <nameField>
        <displayFormat>HD# {0000000}</displayFormat>
        <label>Holder Product Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Holder Product Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>