force-app/main/default/objects/Holder_Product_Detail__c/fields/Bolting_Class_Desc__c.field-meta.xml
<CustomField>
    <fullName>Bolting_Class_Desc__c</fullName>
    <label>Bolting Class Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>