force-app/main/default/objects/Holder_Product_Detail__c/fields/CSSUM__c.field-meta.xml
<CustomField>
    <fullName>CSSUM__c</fullName>
    <label>CSSUM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>