force-app/main/default/objects/Holder_Product_Detail__c/fields/HIC_Desc__c.field-meta.xml
<CustomField>
    <fullName>HIC_Desc__c</fullName>
    <label>HIC Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>