force-app/main/default/objects/Holder_Product_Detail__c/fields/Holder_Type__c.field-meta.xml
<CustomField>
    <fullName>Holder_Type__c</fullName>
    <label>Holder Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>