force-app/main/default/objects/Holder_Product_Detail__c/fields/SZC_Desc__c.field-meta.xml
<CustomField>
    <fullName>SZC_Desc__c</fullName>
    <label>SZC Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>